--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,27 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="./index.css">
+</head>
+<body>
+
+  <div class="top-box">
+    <div class="purple-box"></div>
+    <div class="green-box"></div>
+    <div class="blue-circle"></div>
+  </div>
+
+  <div class="middle-box">
+    <div class="shadow-box"></div>
+  </div>
+
+  <div class="bottom-box">
+    <div class="hello">HELLO <br>FRIENDS</div>
+  </div>
+
+</body>
+</html>
