created solution for third problem

--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,24 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="./index.css">
+</head>
+<body>
+
+  <div class="small-blue"></div>
+
+  <div class="text-box">
+    <div class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis aperiam consequatur alias omnis et, accusamus ea itaque culpa neque nam quae quaerat cumque quam cupiditate rerum error nihil minima soluta? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum expedita officiis velit obcaecati soluta odit, maiores minus in voluptatum incidunt perspiciatis explicabo tempore? Mollitia, autem facilis! Beatae quaerat nulla quo?</div>
+  </div>
+
+  <div class="blue-box"></div>
+  <div class="green-box"></div>
+  <div class="olive-box"></div>
+  <div class="yellow-box"></div>
+
+</body>
+</html>
